--- a/project1.css
+++ b/project1.css
@@ -1,4 +1,28 @@
 /* This CSS file was compiled from a SASS SCSS file. */
+nav .navbar-brand
+{
+    /* size for brand */
+    font-size: xx-large;
+}
+
+/* colors for brand */
+nav .navbar-brand .blue
+{
+    color: #537fbe;
+}
+nav .navbar-brand .red
+{
+    color: #ea433b;
+}
+nav .navbar-brand .yellow
+{
+    color: #f5b82e;
+}
+nav .navbar-brand .green
+{
+    color: #2e944b;
+}
+
 div.logo h1 {
   font-family: serif;
   font-size: 24px;
