--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,33 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Finda Book</h1>
+      <h1>Finda Book</h1>
+      <div class="bio">
+        <div>
+          Search by:
+        </div>
+        <div>
+          field
+        </div>
+        <div>
+            text
+        </div>
+      </div>
+
+    <form action="/register" method="post">
+        <div class="form-group">
+            <input autocomplete="off" autofocus class="form-control" name="name" placeholder="Your Name" type="text"/>
+        </div>
+        <div class="form-group">
+            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text"/>
+        </div>
+        <div class="form-group">
+            <input class="form-control" name="password" placeholder="Password" type="password"/>
+        </div>
+        <div class="form-group">
+            <input class="form-control" name="confirmation" placeholder="Re-enter Password" type="password"/>
+        </div>
+        <button class="btn btn-primary" type="submit">Register</button>
+    </form>
 
 {% endblock %}
