--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,9 +31,17 @@
             {% endif %}
         </div>
         </nav>
+
+        {% if get_flashed_messages() %}
+            <header>
+                <div class="alert alert-primary border text-center" role="alert">
+                    {{ get_flashed_messages() | join(" ") }}
+                </div>
+            </header>
+        {% endif %}
+
         <div class="container logo">
-            {% block body %}
-            {% endblock %}
+            {% block body %}{% endblock %}
         </div>
 
         <main class="container p-5">
