--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,30 @@
       <button class="btn btn-primary" type="submit">Search</button>
     </form>
 </div>
+<br>
 
+{% if matrix %}
+<table class="table table-striped">
+    <thead>
+        <tr>
+            {% for c in matrix[0][1:] %}
+                <th>{{ c }}</th>
+            {% endfor %}
+        </tr>
 
+    </thead>
+    <tbody>
+        {% for row in matrix[1:] %}
+        <tr>
+            {% for c in row[1:] %}
+            <td>{{ c }}</td>
+            {% endfor %}
+        </tr>
+        {% endfor %}
+
+    </tbody>
+{% endif %}
+
+</table>
 
 {% endblock %}
