--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
     <tbody>
         {% for row in matrix[1:] %}
         <tr>
-            <td><a href="https://www.w3schools.com?id={{ row[0] }}">{{ row[1] }}</a></td>
+            <td><a href="/book/{{ row[0] }}">{{ row[1] }}</a></td>
             {% for c in row[2:] %}
             <td>{{ c }}</td>
             {% endfor %}
