--- a/templates/book.html
+++ b/templates/book.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
+{% block css_directory %}../{% endblock %}
+
 {% block title %}
     Finda Book by James
 {% endblock %}
