test of gitignore

--- a/templates/book.html
+++ b/templates/book.html
@@ -21,7 +21,7 @@
 
     <hr>
     <div class="container">
-        <form action="/" method="post">
+        <form method="post">
     
           <input autocomplete="on" autofocus class="form-control input-sm" name="searchtext" placeholder="Enter Text to Search For" type="text"/><br>
     
