--- a/templates/book.html
+++ b/templates/book.html
@@ -22,15 +22,20 @@
     <hr>
     <div class="container">
         <form method="post">
-    
-          <input autocomplete="on" autofocus class="form-control input-sm" name="searchtext" placeholder="Enter Text to Search For" type="text"/><br>
-    
-          <input type="radio" name="fieldname" value="title" checked> Title 
-          <input type="radio" name="fieldname" value="author"> Author
-          <input type="radio" name="fieldname" value="isbn"> ISBN       
-    
+
+          <label for="my_rating">Rate this book:</label>
+          <input type="radio" name="my_rating" value=1>1 
+          <input type="radio" name="my_rating" value=2>2
+          <input type="radio" name="my_rating" value=3>3  
+          <input type="radio" name="my_rating" value=4>4        
+          <input type="radio" name="my_rating" value=5>5 Stars  <br>
+
+          <label for="my_review">What did you think?</label>
+          <textarea class="form-control" id="my_review" name="my_review" rows="3"></textarea> <br>
+
           <button class="btn btn-primary" type="submit">Post</button>
         </form>
+        <hr>
     </div>
 
 
